fixed error message gap

--- a/style.css
+++ b/style.css
@@ -383,6 +383,7 @@ main {
 
 .js-error-message {
 	margin-top: 150px;
+	text-align: center;
 }
 
 /*tablet media queries*/
